# srtm2ply

./: CMakeLists.txt  LICENSE  README.md
src/: Architecture.h  CLI.cpp  CLI.h  CLI_MSVC.cpp  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Parsing.cpp  Parsing.h  SRTM.h  Tensor.h  Utilities.cpp  Utilities.h  main.cpp
